<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="replay">Replay</string>
    <string name="turn_off">Turn Off</string>
    <string name="turn_on">Turn On</string>
    <string name="record">Record</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="open_guide">Open Guide</string>
    <string name="app_name">Talos Rowing</string>
    <string name="preference_reset_dialog_message">Would you like to reset your old Talos Rowing settings (recommended)?</string>
    <string name="tilt_freeze_warning">Tilt freeze will stop dynamic device orientation detection. You should only continue if your device
    is hard-attached onto the boat and you have properly leveled it. The adjustment itself will take ${CALIBRATION_SECONDS} seconds, during which the boat should not be touched.</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="license">License</string>
    <string name="changelog">Changelog</string>
    <string name="about_text">
    	Talos Rowing is an Open Source rowing application.
    	\n
		\nSee http://nargila.org/trac/robostroke for more details.
		\n
    	\nAndroid Version ${VERSION}
    	\n
    	\nCopyright &#169; 2013 Tal Shalif
    	\n
    	\nUse at your own risk.</string>
    <string name="default_session_record_dispatch_address">tshalif+talos-rowing@gmail.com</string>
    <string name="session_record_upload_size_too_large">File too large. Please record sessions shorter than %d minutes in length</string>
    <string name="file_too_large">File Too Large</string>
    <string name="crash_toast_text">Talos Rowing has crashed. Please send a report to the developer..</string>
    <string name="crash_dialog_title">Talos Rowing has crashed</string>
    <string name="crash_dialog_text">An unexpected error has occurred. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
</resources>
