<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/play" android:title="@string/play"></item>
	<item android:id="@+id/stop" android:title="@string/stop"
		android:enabled="false"></item>
	<item android:id="@+id/pause" android:title="@string/pause"
	android:enabled="false"></item>
	<item android:id="@+id/record" android:title="@string/record">
		<menu>
			<group android:id="@+id/group01" android:checkableBehavior="all" android:visible="true" android:enabled="true">
				<item android:id="@+id/record_on" android:title="@string/turn_on"
					android:checkable="true"></item>
				<item android:id="@+id/record_off" android:title="@string/turn_off"
					android:checkable="true"></item>
			</group>
		</menu>
	</item>
</menu>
